--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -82,7 +82,7 @@ jobs:
         run: |
           echo "THEME=blue" >> $GITHUB_ENV
           echo "ICM_CHANNEL=inSPIRED-inTRONICS_Business-Site" >> $GITHUB_ENV
-          echo "FEATURES=quoting,quickorder,orderTemplates,compare,recently,businessCustomerRegistration,advancedVariationHandling" >> $GITHUB_ENV
+          echo "FEATURES=quoting,quickorder,orderTemplates,compare,recently,businessCustomerRegistration,organizationHierarchies,advancedVariationHandling" >> $GITHUB_ENV
 
       - name: Start SSR
         run: npm run serve &
@@ -130,7 +130,7 @@ jobs:
         run: |
           echo "THEME=blue" >> $GITHUB_ENV
           echo "ICM_CHANNEL=inSPIRED-inTRONICS_Business-Site" >> $GITHUB_ENV
-          echo "FEATURES=quoting,quickorder,orderTemplates,compare,recently,businessCustomerRegistration,advancedVariationHandling" >> $GITHUB_ENV
+          echo "FEATURES=quoting,quickorder,orderTemplates,compare,recently,businessCustomerRegistration,organizationHierarchies,advancedVariationHandling" >> $GITHUB_ENV
 
       - name: Start SSR
         if: matrix.test != 'mock'
