--- a/.github/workflows/demo-server.yml
+++ b/.github/workflows/demo-server.yml
@@ -65,7 +65,7 @@ jobs:
           GROUP: ${{ secrets.AZURE_DEMO_RESOURCEGROUP }}
         run: |
           az webapp config container set --resource-group $GROUP --name $APP --docker-registry-server-user ${{ secrets.DOCKER_REGISTRY_USERNAME }} --docker-registry-server-password ${{ secrets.DOCKER_REGISTRY_PASSWORD }} --docker-custom-image-name $DOCKER_IMAGE_UNIVERSAL || az webapp create --resource-group $GROUP --plan ${{ secrets.AZURE_DEMO_APPSERVICEPLAN }} --name $APP --docker-registry-server-user ${{ secrets.DOCKER_REGISTRY_USERNAME }} --docker-registry-server-password ${{ secrets.DOCKER_REGISTRY_PASSWORD }} --deployment-container-image-name $DOCKER_IMAGE_UNIVERSAL
-          az webapp config appsettings set -g $GROUP -n $APP --settings LOGGING=true ICM_BASE_URL=$ICM_BASE_URL
+          az webapp config appsettings set -g $GROUP -n $APP --settings LOGGING=true ICM_BASE_URL="https://pwasso.test.intershop.com" ICM_IDENTITY_PROVIDER=Auth0 IDENTITY_PROVIDERS='{ "Auth0": { "type": "auth0", "domain": "dev-9pqwi8uh.eu.auth0.com", "clientID": "V2xvLUo3YSfGdCmJz7u381dSevoVkOso" } }'
           az webapp deployment container config -g $GROUP -n $APP --enable-cd true
           echo "B2C channel: http://$APP.azurewebsites.net"
 
@@ -85,6 +85,5 @@ jobs:
         uses: peter-evans/commit-comment@v1
         with:
           body: |
-            Azure Demo Servers are available:
+            Azure Demo Server with Auth0 available:
             - [Universal B2C](http://${{ env.APP }}-${{ env.B2C_APP_SUFFIX }}.azurewebsites.net)
-            - [Universal B2B](http://${{ env.APP }}-${{ env.B2B_APP_SUFFIX }}.azurewebsites.net)
